--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "builds": [{ "src": "./", "use":
+    "builds": [{ "src": "./src/main.ts", "use":
     "@vercel/node"}],
     "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
