--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "vercel": "^34.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
