--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-    "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/server.js",
-        "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
-      }
-    ]
+    "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
   }
