--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,15 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/main.ts",
+            "src": "build/main.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "src/main.ts",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE"
-            ]
+            "src": "/(.*)",
+            "dest": "build/main.js",
+            "methods": [ "GET", "POST", "PUT", "PATCH", "DELETE" ]
         }
     ]
 }
